--- a/Plant/Resources/Views/Home/Index.en.resx
+++ b/Plant/Resources/Views/Home/Index.en.resx
@@ -133,7 +133,7 @@
     <value>Discover Now</value>
   </data>
   <data name="featured products" xml:space="preserve">
-    <value>Featured Products</value>
+    <value>Our Products</value>
   </data>
   <data name="Free Delivery" xml:space="preserve">
     <value>Free Delivery</value>
