--- a/Plant/Resources/Views/Home/Index.vi.resx
+++ b/Plant/Resources/Views/Home/Index.vi.resx
@@ -133,7 +133,7 @@
     <value>Khám Phá  Ngay</value>
   </data>
   <data name="featured products" xml:space="preserve">
-    <value>Sản Phẩm Nổi Bật</value>
+    <value>Sản Phẩm Của Chúng Tôi</value>
   </data>
   <data name="Free Delivery" xml:space="preserve">
     <value>Giao hàng miễn phí</value>
