--- a/Plant/Resources/Views/Shared/_LoginPartial.en.resx
+++ b/Plant/Resources/Views/Shared/_LoginPartial.en.resx
@@ -117,20 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="had account" xml:space="preserve">
-    <value>Do you already have an account?</value>
-  </data>
   <data name="login" xml:space="preserve">
     <value>Login</value>
   </data>
-  <data name="name" xml:space="preserve">
-    <value>Full Name</value>
+  <data name="logout" xml:space="preserve">
+    <value>Logout</value>
   </data>
-  <data name="password" xml:space="preserve">
-    <value>Password</value>
+  <data name="my account" xml:space="preserve">
+    <value>My Account</value>
   </data>
-  <data name="phone" xml:space="preserve">
-    <value>Phone Number</value>
+  <data name="purchase order" xml:space="preserve">
+    <value>Purchase Order</value>
   </data>
   <data name="register" xml:space="preserve">
     <value>Register</value>
