--- a/Plant/Resources/Views/Shared/_LoginPartial.vi.resx
+++ b/Plant/Resources/Views/Shared/_LoginPartial.vi.resx
@@ -117,88 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="cart subtotal" xml:space="preserve">
-    <value>Tổng tiền hàng</value>
+  <data name="login" xml:space="preserve">
+    <value>Đăng nhập</value>
   </data>
-  <data name="choose city" xml:space="preserve">
-    <value>Chọn tỉnh, thành phố ...</value>
+  <data name="logout" xml:space="preserve">
+    <value>Đăng xuất</value>
   </data>
-  <data name="choose district" xml:space="preserve">
-    <value>Chọn quận, huyện ...</value>
+  <data name="my account" xml:space="preserve">
+    <value>Tài khoản của tôi</value>
   </data>
-  <data name="choose ward" xml:space="preserve">
-    <value>Chọn phường, xã ...</value>
+  <data name="purchase order" xml:space="preserve">
+    <value>Đơn mua</value>
   </data>
-  <data name="city" xml:space="preserve">
-    <value>Tỉnh / Thành phố</value>
-  </data>
-  <data name="delivery address" xml:space="preserve">
-    <value>Địa chỉ nhận hàng</value>
-  </data>
-  <data name="district" xml:space="preserve">
-    <value>Quận / Huyện</value>
-  </data>
-  <data name="firstname" xml:space="preserve">
-    <value>Tên</value>
-  </data>
-  <data name="home" xml:space="preserve">
-    <value>Trang chủ</value>
-  </data>
-  <data name="lastname" xml:space="preserve">
-    <value>Họ</value>
-  </data>
-  <data name="method payment" xml:space="preserve">
-    <value>Thanh toán với hình thức chuyển khoản qua Internet Banking</value>
-  </data>
-  <data name="money" xml:space="preserve">
-    <value>Thành tiền</value>
-  </data>
-  <data name="order" xml:space="preserve">
-    <value>Giỏ hàng</value>
-  </data>
-  <data name="order now" xml:space="preserve">
-    <value>Đặt hàng</value>
-  </data>
-  <data name="payment" xml:space="preserve">
-    <value>Phương thức thanh toán</value>
-  </data>
-  <data name="payment cod" xml:space="preserve">
-    <value>Thanh toán khi nhận hàng (COD)</value>
-  </data>
-  <data name="payment ibanking" xml:space="preserve">
-    <value>Thanh toán trước qua iBanking</value>
-  </data>
-  <data name="payment infor" xml:space="preserve">
-    <value>Thông tin thanh toán:</value>
-  </data>
-  <data name="payment name" xml:space="preserve">
-    <value>Chủ tài khoản: Nguyễn Quang Linh</value>
-  </data>
-  <data name="person infor" xml:space="preserve">
-    <value>Thông tin cá nhân</value>
-  </data>
-  <data name="phone" xml:space="preserve">
-    <value>Số điện thoại</value>
-  </data>
-  <data name="phonenumber" xml:space="preserve">
-    <value>Số điện thoại</value>
-  </data>
-  <data name="purchase" xml:space="preserve">
-    <value>Thanh toán</value>
-  </data>
-  <data name="road" xml:space="preserve">
-    <value>Số nhà, tên đường</value>
-  </data>
-  <data name="shipping" xml:space="preserve">
-    <value>Phí vận chuyển</value>
-  </data>
-  <data name="total" xml:space="preserve">
-    <value>Tổng tiền hàng</value>
-  </data>
-  <data name="ward" xml:space="preserve">
-    <value>Phường / Xã</value>
-  </data>
-  <data name="your order" xml:space="preserve">
-    <value>Đơn hàng của bạn</value>
+  <data name="register" xml:space="preserve">
+    <value>Đăng kí</value>
   </data>
 </root>
